--- a/app/css/directives/circularHeatForm.less
+++ b/app/css/directives/circularHeatForm.less
@@ -15,9 +15,9 @@
 //
 
 .circularheatform {
-    height:100%;
-    width:100%;
-    margin:0px;
+    height: @widget-height;
+    width: @widget-width;
+    margin: 0px;
     overflow: auto;
     padding: 20px;
 
@@ -35,7 +35,7 @@
 .visualization-widget-mobile {
     .circularheatform {
         .circularheatchart {
-            height: 400px;
+            height: @mobile-widget-height;
         }
     }
 }
