--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -29,7 +29,7 @@ span {
 .count-by-grid {
     min-height: 80px;
     background-color: @main-background;
-    border: 1px solid @mid-gray;
+    border: @border;
     border-radius: 2px;
     box-shadow: 0 1px 4px @shadow;
     box-sizing: content-box;
@@ -84,7 +84,7 @@ span {
         }
 
         .slick-sortable-placeholder{
-            background: @mid-gray;
+            background: @border-color;
         }
     }
 
