--- a/app/css/directives/tagCloud.less
+++ b/app/css/directives/tagCloud.less
@@ -28,7 +28,7 @@
         cursor: pointer;
 
         &:hover {
-            color: #333333 !important;
+            color: @mid-text-color !important;
             text-decoration: none;
         }
     }
