--- a/app/css/directives/timelineSelectorChart.less
+++ b/app/css/directives/timelineSelectorChart.less
@@ -112,14 +112,14 @@
 
     .series-title {
         text-shadow:
-            1px 1px 0 #f1f1f1,
-            1px 0px 0 #f1f1f1,
-            1px -1px 0 #f1f1f1,
-            -1px 1px 0 #f1f1f1,
-            -1px 0px 0 #f1f1f1,
-            -1px -1px 0 #f1f1f1,
-            0px 2px 0 #f1f1f1,
-            0px -2px 0 #f1f1f1;
+            1px 1px 0 @text-shadow-color,
+            1px 0px 0 @text-shadow-color,
+            1px -1px 0 @text-shadow-color,
+            -1px 1px 0 @text-shadow-color,
+            -1px 0px 0 @text-shadow-color,
+            -1px -1px 0 @text-shadow-color,
+            0px 2px 0 @text-shadow-color,
+            0px -2px 0 @text-shadow-color;
         font-weight: bold;
     }
 
@@ -132,14 +132,14 @@
     .y.axis {
         text {
             text-shadow:
-                1px 1px 0 #f1f1f1,
-                1px 0px 0 #f1f1f1,
-                1px -1px 0 #f1f1f1,
-                -1px 1px 0 #f1f1f1,
-                -1px 0px 0 #f1f1f1,
-                -1px -1px 0 #f1f1f1,
-                0px 2px 0 #f1f1f1,
-                0px -2px 0 #f1f1f1;
+                1px 1px 0 @text-shadow-color,
+                1px 0px 0 @text-shadow-color,
+                1px -1px 0 @text-shadow-color,
+                -1px 1px 0 @text-shadow-color,
+                -1px 0px 0 @text-shadow-color,
+                -1px -1px 0 @text-shadow-color,
+                0px 2px 0 @text-shadow-color,
+                0px -2px 0 @text-shadow-color;
             font-weight: bold;
         }
 
