--- a/app/css/variables.less
+++ b/app/css/variables.less
@@ -1,24 +1,41 @@
 @main-background: #F1F1F1;
 @main-background-lighten: lighten(@main-background, 4%);
+@main-background-darken: darken(@main-background, 6%);
 @light-background: #FFFFFF;
 
 @main-text-color: #777777;
 @light-text-color: #FFFFFF;
+@mid-text-color: #333333;
+
+
+@error-text-color: #AA1E13;
+
 @chart-text-color: #444444;
-@error-text-color: #FF0000;
-
-@mid-gray: #CCCCCC; //FIXME
+@chart-axis-color: #CCCCCC;
 
 
+@border-color: #CCCCCC;
+
+
+
+@error-color: #C2360D;
+@error-dark-color: #AA1E13;
 
 @accent-bright: #39B54A;
 @accent-light: #7CE98E;
+@accent-dark: #2F9F3E;
 @accent-dulled: #88d292;
 
 
-@shadow: rgba(154, 154, 154, 0.2);
+@shadow: rgba(0, 0, 0, 0.2);
+@text-shadow-color: #FFFFFF;
 
 @widget-height: 100%;
 @widget-width: 100%;
 @mobile-widget-height: 400px;
 @mobile-widget-width: 100%;
+
+@border: 1px solid @border-color;
+@shadow-border: 1px solid @shadow;
+
+@tooltip-background: rgba(255,255,255,0.9);
