--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -8,21 +8,21 @@
             </select>
         </div>
         <div class="form-group">
-            <label>X axis</label>
+            <label>Group Field (X Axis)</label>
             <select class="form-control" ng-model="options.attrX" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
         </div>
         <div class="form-group">
-            <label>Y axis</label>
-            <select class="form-control" ng-model="options.attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
-                <option value="">*</option>
-            </select>
-        </div>
-        <div class="form-group">
+            <label>Aggregation</label>
             <select ng-model="options.barType" class="form-control">
                 <option value="count">Count</option>
                 <option value="sum">Sum</option>
                 <option value="average">Average</option>
+            </select>
+        </div>
+        <div class="form-group" ng-show="(options.barType !== 'count')">
+            <label>Value Field (Y Axis)</label>
+            <select class="form-control" ng-model="options.attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
         </div>
     </options-menu>
