--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -8,25 +8,25 @@
             </select>
         </div>
         <div class="form-group">
-            <label>X Axis (Date Field)</label>
+            <label>Date Field (X Axis)</label>
             <select class="form-control" ng-model="options.attrX" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
         </div>
         <div class="form-group">
-            <label>Y Axis</label>
-            <select class="form-control" ng-model="options.attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
-                <option value="" ng-show="(options.aggregation == 'count')">*</option>
-            </select>
-        </div>
-        <div class="form-group">
+            <label>Aggregation</label>
             <select class="form-control" ng-model="options.aggregation" ng-disabled="!(fields.length > 0)">
                 <option value="count">Count</option>
                 <option value="sum">Sum</option>
                 <option value="average">Average</option>
             </select>
         </div>
+        <div class="form-group" ng-show="(options.aggregation !== 'count')">
+            <label>Value Field (Y Axis)</label>
+            <select class="form-control" ng-model="options.attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+            </select>
+        </div>
         <div class="form-group">
-            <label>Categorize by</label>
+            <label>Group Field</label>
             <select class="form-control" ng-model="options.categoryField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
                 <option value="">None</option>
             </select>
