--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -8,12 +8,12 @@
             </select>
         </div>
         <div class="form-group">
-            <label>Tag Field</label>
+            <label>Data Field</label>
             <select class="form-control" ng-model="options.tagField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForTags()">
             </select>
         </div>
-        <div class="form-group" ng-class="{true: '', false: 'hidden'}[showFilter]">
-            <label>Show records with</label>
+        <div class="form-group" ng-class="{true: '', false: 'hidden'}[filterTags.length > 1]">
+            <label>Show rows with</label>
             <div class="btn-group">
                 <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="true">
