--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -49,6 +49,7 @@
       <div class="form-group">
         <label ng-show="!(navbarItem)">Value</label>
       </div>
+      <div class="clearfix"></div>
     </div>
 
     <div class="filter form-inline" ng-repeat="filterRow in filterTable.getFilterRows()">
@@ -57,15 +58,15 @@
         </select>
       </div>
       <div class="form-group">
-        <select class="form-control" ng-model="filterRow.columnValue" ng-disabled="(filterRow.columnOptions.length == 0) || !(navbarItem)" ng-options="column for column in filterRow.columnOptions" ng-change="dirtyFilterRow(filterRow)">
+        <select class="form-control" ng-model="filterRow.columnValue" ng-disabled="(filterRow.columnOptions.length < 2)" ng-options="column for column in filterRow.columnOptions" ng-change="dirtyFilterRow(filterRow)">
         </select>
       </div>
       <div class="form-group">
-        <select class="form-control"  ng-model="filterRow.operatorValue" ng-disabled="(filterRow.columnOptions.length == 0) || !(navbarItem)" ng-options="operator for operator in filterTable.operatorOptions" ng-change="dirtyFilterRow(filterRow)">
+        <select class="form-control"  ng-model="filterRow.operatorValue" ng-disabled="(filterTable.operatorOptions.length < 2)" ng-options="operator for operator in filterTable.operatorOptions" ng-change="dirtyFilterRow(filterRow)">
         </select>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" size="42" placeholder="Value" ng-model="filterRow.value" ng-change="dirtyFilterRow(filterRow)" ng-disabled="!(navbarItem)">
+        <input type="text" class="form-control" placeholder="Value" ng-model="filterRow.value" ng-change="dirtyFilterRow(filterRow)">
       </div>
       <div class="form-group" ng-show="(navbarItem)">
         <button type="button" class="btn btn-default refresh" title="Refresh" ng-disabled="!(filterRow.dirty)" ng-click="updateFilterRow(filterRow.tableName, filterRow.index)">
@@ -78,9 +79,14 @@
         </button>
       </div>
       <div class="form-group form-group-button" ng-show="!(navbarItem)">
-        <button type="button" class="btn btn-danger" ng-click="removeFilterRow(filterRow.tableName, filterRow.index)">
-          <span class="glyphicon glyphicon-remove"></span>
-        </button>
+          <div class="btn-group">
+              <button type="button" class="btn btn-default refresh" title="Refresh" ng-disabled="!(filterRow.dirty)" ng-click="updateFilterRow(filterRow.tableName, filterRow.index)">
+                  <span class="glyphicon glyphicon-refresh"></span>
+              </button>
+              <button type="button" class="btn btn-danger" ng-click="removeFilterRow(filterRow.tableName, filterRow.index)">
+                  <span class="glyphicon glyphicon-remove"></span>
+              </button>
+          </div>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -111,6 +117,7 @@
           <span class="glyphicon glyphicon-plus"></span>
         </button>
       </div>
+      <div class="clearfix"></div>
     </div>
 
   </div>
