--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -33,7 +33,7 @@
     }
 
     .dot-empty{
-        fill: #FFFFFF;
+        fill: @chart-empty-dot-color;
     }
 
     .gridLines {
@@ -47,14 +47,14 @@
     .horizontalGrid{
         fill: none;
         shape-rendering: crispEdges;
-        stroke: #eeeeee;
+        stroke: @light-chart-axis-color;
         stroke-width : 1px;
         stroke-dasharray: 6px;
     }
 
     .hover-line {
         line {
-            stroke: #e1e1e1;
+            stroke: @light-chart-axis-color;
             fill: none;
             stroke-width: 1px;
         }
@@ -100,6 +100,13 @@
             }
         }
     }
+    .x {
+        &.axis {
+            path {
+                display: none;
+            }
+        }
+    }
 }
 
 .linechartDirective {
@@ -117,11 +124,7 @@
     }
 }
 
-.x.axis {
-    path {
-        display: none;
-    }
-}
+
 
 .visualization-widget {
     .linechartDirective {
