--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -51,11 +51,11 @@
 
     .filter-reset{
         margin: 13px 15px 0px 0px;
-        background-color: @main-background-darker;
+        background-color: @main-background-darken;
 
         .btn{
             border-color: @border-color;
-            background-color: @main-background-darker;
+            background-color: @main-background-darken;
         }
     }
 
@@ -95,7 +95,7 @@
             &:hover{
                 color: @light-text-color;
                 background-color: @accent-bright;
-                border-color: #2F9F3E;
+                border-color: @accent-dark;
             }
         }
 
