--- a/app/css/variables.less
+++ b/app/css/variables.less
@@ -3,23 +3,6 @@
 @main-background-darken: darken(@main-background, 6%);
 @light-background: #FFFFFF;
 
-@main-text-color: #777777;
-@light-text-color: #FFFFFF;
-@mid-text-color: #333333;
-
-
-@error-text-color: #AA1E13;
-
-@chart-text-color: #444444;
-@chart-axis-color: #CCCCCC;
-
-
-@border-color: #CCCCCC;
-
-
-
-@error-color: #C2360D;
-@error-dark-color: #AA1E13;
 
 @accent-bright: #39B54A;
 @accent-light: #7CE98E;
@@ -27,15 +10,34 @@
 @accent-dulled: #88d292;
 
 
+@main-text-color: #777777;
+@light-text-color: #FFFFFF;
+@mid-text-color: #333333;
+
+
+@error-text-color: #AA1E13;
+@error-color: #C2360D;
+@error-dark-color: #AA1E13;
+
+
+@border-color: #CCCCCC;
 @shadow: rgba(0, 0, 0, 0.2);
 @text-shadow-color: #FFFFFF;
+@border: 1px solid @border-color;
+@shadow-border: 1px solid @shadow;
+
+
+@chart-text-color: #444444;
+@chart-axis-color: #CCCCCC;
+@light-chart-axis-color: #EEEEEE;
+@chart-empty-dot-color: #FFFFFF;
+@chart-line-color: #999999;
+
 
 @widget-height: 100%;
 @widget-width: 100%;
 @mobile-widget-height: 400px;
 @mobile-widget-width: 100%;
 
-@border: 1px solid @border-color;
-@shadow-border: 1px solid @shadow;
 
 @tooltip-background: rgba(255,255,255,0.9);
