--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -26,7 +26,7 @@
 
 .sunburst-chart {
     path {
-        stroke: #ffffff;
+        stroke: #FFFFFF;
         fill-rule: evenodd;
         opacity: .8;
 
